--- a/Vanilla-Weather-app/index.html
+++ b/Vanilla-Weather-app/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class=""container>
     <h1>
-        Hello World
+        Hello World testing
     </h1>
     <a href="" class="btn btn-primary">Click me</a>
     </div>
